Test if baseline works

--- a/app/code/Magento/Catalog/view/frontend/templates/product/breadcrumbs.phtml
+++ b/app/code/Magento/Catalog/view/frontend/templates/product/breadcrumbs.phtml
@@ -19,3 +19,9 @@ $widgetOptions = $this->helper(\Magento\Framework\Json\Helper\Data::class)->json
         }
     }
 </script>
+
+<?php if (1 === 1) : ?>
+<?php endif; ?>
+
+
+
